<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/iv_abortdialog_icon"
        android:src="@drawable/remove_from_the_list"
        android:layout_centerHorizontal="true"
        android:padding="2dp"
        android:background="@drawable/deleteitemshadow"
        android:layout_marginTop="40dp"/>
    <com.example.watertankercontroller.CustomViews.RobotoBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/iv_abortdialog_icon"
        android:layout_marginTop="15dp"
        android:id="@+id/abortdialog_message"
        android:text="@string/abort_message"
        android:textSize="16dp"
        android:textColor="@color/Black"/>
    <com.example.watertankercontroller.CustomViews.RobotoRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_abortdialog_warning"
        android:layout_below="@+id/abortdialog_message"
        android:layout_marginTop="10dp"
        android:text="@string/abort_warning"
        android:layout_centerHorizontal="true"
        android:textSize="12dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/abortdialog_divider"
        android:layout_below="@+id/tv_abortdialog_warning"
        android:layout_marginTop="10dp"
        android:background="@color/DarkGray" />
    <com.example.watertankercontroller.CustomViews.RobotoBoldTextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/tv_abortdialog_delete"
        android:layout_below="@+id/abortdialog_divider"
        android:text="@string/delete_text"
        android:textColor="@color/Black"
        android:textSize="18dp"
        android:gravity="center"/>
    <com.example.watertankercontroller.CustomViews.RobotoRegularTextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/tv_abortdialog_cancel"
        android:layout_below="@+id/tv_abortdialog_delete"
        android:text="Cancel"
        android:textColor="@color/White"
        android:background="@color/Green2"
        android:textSize="18dp"
        android:gravity="center"/>
</RelativeLayout>