<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:background="@color/LightGray"
    android:paddingRight="5dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rl_nav_name"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="30dp">
        <com.example.watertankercontroller.CustomViews.RobotoBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nav_name"
            android:text="Richered Hobson"
            android:textColor="@color/Black"
            android:maxLines="1"
            android:textSize="18dp"/>
        <com.example.watertankercontroller.CustomViews.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nav_username"
            android:layout_below="@+id/tv_nav_name"
            android:text="safnaj265"
            android:textSize="16dp"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/nav_underline1"
        android:background="@color/DarkGray"
        android:layout_below="@+id/rl_nav_name"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/rl_nav_bookingform"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/nav_underline1">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/iv_nav_bookingform"
            android:src="@drawable/bookingform_menu"
            android:layout_alignBottom="@+id/tv_nav_bookingform"/>
        <com.example.watertankercontroller.CustomViews.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nav_bookingform"
            android:layout_toRightOf="@+id/iv_nav_bookingform"
            android:layout_marginLeft="10dp"
            android:text="@string/nav_menu_bookingform"
            android:layout_centerVertical="true"
            android:textColor="@color/Black"
            android:textSize="16dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/nav_underline3"
        android:background="@color/DarkGray"
        android:layout_below="@+id/rl_nav_bookingform"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/rl_nav_tankerdetails"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/nav_underline3">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/iv_nav_tankerdetails"
            android:src="@drawable/tanker_deatials_menu"
            android:layout_alignBottom="@+id/tv_nav_tankerdetails"/>
        <com.example.watertankercontroller.CustomViews.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nav_tankerdetails"
            android:layout_toRightOf="@+id/iv_nav_tankerdetails"
            android:layout_marginLeft="10dp"
            android:text="@string/nav_menu_tankerdetails"
            android:layout_centerVertical="true"
            android:textColor="@color/Black"
            android:textSize="16dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/nav_underline4"
        android:background="@color/DarkGray"
        android:layout_below="@+id/rl_nav_tankerdetails"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/rl_nav_logout"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/nav_underline4">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/iv_nav_logout"
            android:src="@drawable/logout_menu"
            android:layout_alignBottom="@+id/tv_nav_logout"/>
        <com.example.watertankercontroller.CustomViews.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nav_logout"
            android:layout_toRightOf="@+id/iv_nav_logout"
            android:layout_marginLeft="10dp"
            android:text="@string/nav_menu_logout"
            android:layout_centerVertical="true"
            android:textColor="@color/Black"
            android:textSize="16dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/nav_underline5"
        android:background="@color/DarkGray"
        android:layout_below="@+id/rl_nav_logout"/>

</RelativeLayout>