<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGray"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toTopOf="@+id/cl_login_loginbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:id="@+id/rl_login_login_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_login_login_title"
                    android:text="@string/sign_in_btn_text"
                    android:textSize="16sp"
                    android:textColor="@color/Green2"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"/>
            </RelativeLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="45dp"
                android:background="@color/White"
                app:layout_constraintTop_toBottomOf="@+id/rl_login_login_title"
                app:layout_constraintStart_toStartOf="@+id/rl_login_login_title">
                <RelativeLayout
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/rl_login_username_icon"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="45dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_centerInParent="true"
                        android:id="@+id/iv_login_username"
                        android:src="@drawable/username_login"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_login_username_title"
                    android:text="@string/login_username"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/Black"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:foregroundGravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintStart_toEndOf="@id/rl_login_username_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/rl_login_username_icon"
                    app:layout_constraintBottom_toBottomOf="@id/rl_login_username_icon"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_login_username"
                    android:hint="abcedefg.com"
                    app:layout_constraintStart_toStartOf="@+id/rl_login_username_icon"
                    app:layout_constraintEnd_toEndOf="@+id/tv_login_username_title"
                    app:layout_constraintTop_toBottomOf="@id/rl_login_username_icon"
                    android:paddingLeft="33dp"
                    android:layout_marginTop="10dp"/>


                <RelativeLayout
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/rl_login_pwd_icon"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_login_username">
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_centerInParent="true"
                        android:id="@+id/iv_login_pwd"
                        android:src="@drawable/passwoord_login"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_login_pwd_title"
                    android:text="@string/login_password"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/Black"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:foregroundGravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintStart_toEndOf="@id/rl_login_pwd_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/rl_login_pwd_icon"
                    app:layout_constraintBottom_toBottomOf="@id/rl_login_pwd_icon"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_login_pwd"
                    android:hint="Enter Password"
                    android:inputType="textPassword"
                    app:layout_constraintStart_toStartOf="@+id/rl_login_pwd_icon"
                    app:layout_constraintEnd_toEndOf="@+id/tv_login_pwd_title"
                    app:layout_constraintTop_toBottomOf="@id/rl_login_pwd_icon"
                    android:paddingLeft="33dp"
                    android:layout_marginTop="10dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/cl_login_loginbtn"
        android:background="@color/Green2"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_in_btn_text"
            android:textColor="@color/White"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rl_login_loginarrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/rl_login_loginarrow"
            android:background="@color/Green3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:layout_centerInParent="true"
                android:id="@+id/iv_login_loginarrow"
                android:src="@drawable/click_login" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>